Fixed alignment

--- a/apps/light/src/clients/bodyshop/landingpage/christmas/styles/main.scss
+++ b/apps/light/src/clients/bodyshop/landingpage/christmas/styles/main.scss
@@ -1998,7 +1998,6 @@ div.loading {
                 display: block;
                 width: 100%;
                 height: auto;
-                margin-top: -8px;
             }
         }
     }
